# Create_DB-Postgressql_and_queries_with_python

./: Example_queries.txt  README.md  create_tables.py  dump_postgres_db  insert_data.py  pyproject.toml  tables.sql
py_query_files/: add_query_1.py  add_query_2.py  query_sql1.py  query_sql10.py  query_sql2.py  query_sql3.py  query_sql4.py  query_sql5.py  query_sql6.py  query_sql7.py  query_sql8.py  query_sql9.py
sql_query_files/: additional_query2.sql  additional_query_1.sql  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
